syntax = "proto3";
package org.dephy.pproxy.command.v1;

message AddPeerRequest {
  string multiaddr = 1;
  optional string peer_id = 2;
}

message AddPeerResponse {
  string peer_id = 1;
}

message CreateTunnelServerRequest {
  string peer_id = 1;
  optional string address = 2;
}

message CreateTunnelServerResponse {
  string peer_id = 1;
  string address = 2;
}

message ConnectRelayRequest {
  string multiaddr = 1;
}

message ConnectRelayResponse {
  string relaied_multiaddr = 1;
}

message ExpirePeerAccessRequest {
  string peer_id = 1;
}

message ExpirePeerAccessResponse {}

service CommandService {
  rpc AddPeer(AddPeerRequest) returns (AddPeerResponse);
  rpc CreateTunnelServer(CreateTunnelServerRequest) returns (CreateTunnelServerResponse);
  rpc ConnectRelay(ConnectRelayRequest) returns (ConnectRelayResponse);
  rpc ExpirePeerAccess(ExpirePeerAccessRequest) returns (ExpirePeerAccessResponse);
}
